--- a/desafio04/app/src/main/res/values/dimens.xml
+++ b/desafio04/app/src/main/res/values/dimens.xml
@@ -7,4 +7,10 @@
     <dimen name="dimen_25sp">25sp</dimen>
     <dimen name="dimen_10dp">10dp</dimen>
     <dimen name="dimen_16sp">16sp</dimen>
+    <dimen name="dimen_250dp">250dp</dimen>
+    <dimen name="dimen_16dp">16dp</dimen>
+    <dimen name="dimen_150dp">150dp</dimen>
+    <dimen name="dimen_200dp">200dp</dimen>
+    <dimen name="dimen_85dp">85dp</dimen>
+    <dimen name="dimen_30dp">30dp</dimen>
 </resources>
