--- a/desafio04/app/src/main/res/values/colors.xml
+++ b/desafio04/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="gray">#343F4B</color>
     <color name="white">#FFFFFF</color>
+    <color name="gray2">#DDDDDD</color>
 </resources>
