--- a/desafio04/app/src/main/res/layout/fragment_register_game.xml
+++ b/desafio04/app/src/main/res/layout/fragment_register_game.xml
@@ -8,7 +8,7 @@
     tools:context=".registerGame.view.RegisterGameFragment">
 
     <ImageView
-        android:id="@+id/img"
+        android:id="@+id/imgGame_RegisterGame"
         android:layout_width="@dimen/dimen_150dp"
         android:layout_height="@dimen/dimen_150dp"
         android:layout_marginTop="45dp"
@@ -64,6 +64,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
+                    android:inputType="number"
                     android:layout_height="wrap_content" />
 
             </com.google.android.material.textfield.TextInputLayout>
